--- a/template/template.wxml
+++ b/template/template.wxml
@@ -30,6 +30,71 @@
     </view>
   </view>
 </template>
+
+
+<template name="tjitem">
+  <view class="item" bindtap='looktjres' data-id='{{id}}' data-user_id="{{user_id}}" data-sortid="{{sort}}">
+    <view class='showImg'>
+      <image class="item_img" src="{{thumb}}" mode="widthFix" lazy-load='true'></image>
+      <image class='item_act' wx:if="{{authur_type=='type_one'}}" src="{{authur_act}}" lazy-load='true'></image>
+      <view class='item_txt'>{{title}}</view>
+    </view>
+    <view class='showText'>
+      <view class='anthur_Group'>
+        <image class='show_anthur' src="{{avatar}}" lazy-load='true'></image>
+        <view class='anthur_Info'>
+          <view class='anthurInfo_name'>
+            <view class='name'>{{user_nickname}}</view>
+            <text class='iconfont icon-nv' wx:if="{{sex==2}}"></text>
+            <text class='iconfont icon-nan' wx:else></text>
+          </view>
+          <view class='anthur_Data'>
+            {{create_time}}
+          </view>
+        </view>
+        <text class='iconfont icon-xihuan' catchtap='love' data-tid="{{user_id}}" wx:if="{{is_good==0}}"></text>
+        <text class='iconfont icon-xihuan1' catchtap='love' data-tid="{{user_id}}" wx:if="{{is_good==1}}"></text>
+      </view>
+      <view class='adder_Group'>
+        <text class='iconfont icon-dizhi'></text>
+        <view class='adder_res'>{{position}}</view>
+        <view class='distance'>距离{{distance}}km</view>
+      </view>
+    </view>
+  </view>
+</template>
+<!-- 附近模板 -->
+<template name="nearitem">
+  <view class="item" bindtap='looktjres' data-id='{{id}}' data-user_id="{{user_id}}" data-sortid="{{sort}}">
+    <view class='showImg'>
+      <image class="item_img" src="{{thumb}}" mode="widthFix" lazy-load='true'></image>
+      <image class='item_act' wx:if="{{authur_type=='type_one'}}" src="{{authur_act}}" lazy-load='true'></image>
+      <view class='item_txt'>{{title}}</view>
+    </view>
+    <view class='showText'>
+      <view class='anthur_Group'>
+        <image class='show_anthur' src="{{avatar}}" lazy-load='true'></image>
+        <view class='anthur_Info'>
+          <view class='anthurInfo_name'>
+            <view class='name'>{{user_nickname}}</view>
+            <text class='iconfont icon-nv' wx:if="{{sex==2}}"></text>
+            <text class='iconfont icon-nan' wx:else></text>
+          </view>
+          <view class='anthur_Data'>
+            {{create_time}}
+          </view>
+        </view>
+        <text class='iconfont icon-xihuan' catchtap='love' data-tid="{{user_id}}" wx:if="{{is_good==0}}"></text>
+        <text class='iconfont icon-xihuan1' catchtap='love' data-tid="{{user_id}}" wx:if="{{is_good==1}}"></text>
+      </view>
+      <view class='adder_Group'>
+        <text class='iconfont icon-dizhi'></text>
+        <view class='adder_res'>{{position}}</view>
+        <view class='distance'>距离{{distance}}km</view>
+      </view>
+    </view>
+  </view>
+</template>
 <!--兴趣社模板  -->
 <template name="Interestitem">
   <view class="Interestitem" bindtap='lookinterst' data-id='{{id}}'>
@@ -62,32 +127,32 @@
 </template>
 <!--附近模板  -->
 <template name="myitem">
-  <view class="item">
+  <view class="item" bindtap='lookother' data-id='{{id}}' data-userid="{{user_id}}" data-sortid="{{sort}}">
     <view class='showImg'>
-      <image class="item_img" src="{{mian_imgurl}}" mode="widthFix"></image>
-      <image class='myitem_act' wx:if="{{authur_type=='type_one'}}" src="{{authur_act}}"></image>
-      <view class='myitem_price'>赚10元</view>
-      <view class='myitem_type'>跑</view>
-      <view class='myitem_txt'>{{title}}</view>
-      <view class='myshowText'>
-        <view class='anthur_Group'>
-          <image class='show_anthur' src="{{authur_imgurl}}"></image>
-          <view class='anthur_Info'>
-            <view class='anthurInfo_name'>
-              <view class='name'>{{authur_name}}</view>
-              <text class='iconfont icon-nv' wx:if="{{authur_sex==1}}"></text>
+      <image class="item_img" src="{{thumb}}" mode="widthFix"></image>
+      <image class='myitem_act' wx:if="{{is_new=='新发布'}}" src="{{authur_act}}"></image>
+      <view class='myitem_price'>赚{{price}}元</view>
+      <view class='myitem_type'>{{type}}</view>
+      <view class='myitem_txt'>{{word}}</view>
+      <view class='myshowText_one'>
+        <view class='anthur_Group_one'>
+          <image class='show_anthur_one' src="{{avatar}}"></image>
+          <view class='anthur_Info_one' style='display:flex;align-items: center;'>
+            <view class='anthurInfo_name_one' style='display:flex;align-items: center;'>
+              <view class='name'>{{user_nickname}}</view>
+              <text class='iconfont icon-nv' wx:if="{{sex==1}}"></text>
               <text class='iconfont icon-nan' wx:else></text>
             </view>
-            <view class='anthur_Data'>
-              2018/02/02
-            </view>
+
           </view>
-          <text class='iconfont icon-xihuan'></text>
+          <view class='anthur_Data'>
+            {{create_time}}
+          </view>
         </view>
         <view class='myadder_Group'>
           <text class='iconfont icon-dizhi'></text>
-          <view class='adder_res'>天津 · 建国楼</view>
-          <view class='distance'>距离0.8km</view>
+          <view class='adder_res'>{{address}}</view>
+          <view class='distance'>距离{{distance}}km</view>
         </view>
       </view>
     </view>
@@ -95,7 +160,7 @@
 </template>
 <!--需求模板  -->
 <template name="deminditem">
-  <view class="demminditem" bindtap='goask_res' data-id='{{id}}'  data-userid="{{user_id}}">
+  <view class="demminditem" bindtap='goask_res' data-id='{{id}}' data-userid="{{user_id}}" data-sortid="{{sort}}">
     <view class='demind_left'>
       <image class='demind_img' src='{{thumb}}'></image>
       <view class='run'>{{type}}</view>
@@ -106,7 +171,7 @@
         <image class='demindshow_anthur' src="{{avatar}}"></image>
         <view class='deminanthurInfo_name'>
           <view class='demindname'>{{user_nickname}}</view>
-          <text class='iconfont icon-nv' wx:if="{{sex==2}}" ></text>
+          <text class='iconfont icon-nv' wx:if="{{sex==2}}"></text>
           <text class='iconfont icon-nan' wx:if="{{sex==1}}"></text>
           <view class='mintime'>{{create_time}}</view>
         </view>
@@ -540,16 +605,16 @@
         <view class='startZuo'>
           <text class='iconfont icon-shuipingzuo' wx:if="{{data.constellation=='水瓶座'}}"></text>
           <text class='iconfont icon-shuangyuzuo' wx:if="{{data.constellation=='双鱼座'}}"></text>
-           <text class='iconfont icon-shizizuo' wx:if="{{data.constellation=='狮子座'}}"></text>
-            <text class='iconfont icon-juxiezuo' wx:if="{{data.constellation=='巨蟹座'}}"></text>
-             <text class='iconfont icon-shuangzizuo' wx:if="{{data.constellation=='双子座'}}"></text>
-              <text class='iconfont icon-mojiezuo' wx:if="{{data.constellation=='摩羯座'}}"></text>
-               <text class='iconfont icon-jinniuzuo' wx:if="{{data.constellation=='金牛座'}}"></text>
-                <text class='iconfont icon-tianchengzuo' wx:if="{{data.constellation=='天枰座'}}"></text>
-                 <text class='iconfont icon-sheshouzuo' wx:if="{{data.constellation=='射手座'}}"></text>
-                  <text class='iconfont icon-chunvzuo' wx:if="{{data.constellation=='处女座'}}"></text>
-                   <text class='iconfont icon-tianhezuo' wx:if="{{data.constellation=='天蝎座'}}"></text>
-                    <text class='iconfont icon-baiyangzuo' wx:if="{{data.constellation=='白羊座'}}"></text>
+          <text class='iconfont icon-shizizuo' wx:if="{{data.constellation=='狮子座'}}"></text>
+          <text class='iconfont icon-juxiezuo' wx:if="{{data.constellation=='巨蟹座'}}"></text>
+          <text class='iconfont icon-shuangzizuo' wx:if="{{data.constellation=='双子座'}}"></text>
+          <text class='iconfont icon-mojiezuo' wx:if="{{data.constellation=='摩羯座'}}"></text>
+          <text class='iconfont icon-jinniuzuo' wx:if="{{data.constellation=='金牛座'}}"></text>
+          <text class='iconfont icon-tianchengzuo' wx:if="{{data.constellation=='天枰座'}}"></text>
+          <text class='iconfont icon-sheshouzuo' wx:if="{{data.constellation=='射手座'}}"></text>
+          <text class='iconfont icon-chunvzuo' wx:if="{{data.constellation=='处女座'}}"></text>
+          <text class='iconfont icon-tianhezuo' wx:if="{{data.constellation=='天蝎座'}}"></text>
+          <text class='iconfont icon-baiyangzuo' wx:if="{{data.constellation=='白羊座'}}"></text>
           <text class='startTitle'>{{data.constellation}}</text>
         </view>
         <view class='perSonl'>
@@ -557,7 +622,7 @@
           </image>
           <view class='sex'>
             <text class='iconfont icon-nan' style='font-size:40rpx;' wx:if="{{data.sex==1}}"></text>
-            <text class='iconfont icon-nv' style='font-size:40rpx;'wx:if="{{data.sex==2}}"></text>
+            <text class='iconfont icon-nv' style='font-size:40rpx;' wx:if="{{data.sex==2}}"></text>
           </view>
           <view class='per_title'>{{data.user_nickname}}</view>
         </view>
@@ -581,7 +646,7 @@
       <view class='giftTab'>
         <view class="Tab_item {{myindex==0?'Tab_itemActive':''}}" catchtap='lookgift' data-id='0' wx:if="{{GiftData.length>0}}">{{GiftData[0].sort_name}}</view>
         <view class="Tab_item {{myindex==1?'Tab_itemActive':''}}" catchtap='lookgift' data-id='1' wx:if="{{GiftData.length>1}}">{{GiftData[1].sort_name}}</view>
-        <view class="Tab_item {{myindex==2?'Tab_itemActive':''}}" style='border:none' catchtap='lookgift' data-id='2'wx:if="{{GiftData.length>2}}">{{GiftData[2].sort_name}}</view>
+        <view class="Tab_item {{myindex==2?'Tab_itemActive':''}}" style='border:none' catchtap='lookgift' data-id='2' wx:if="{{GiftData.length>2}}">{{GiftData[2].sort_name}}</view>
       </view>
       <scroll-view class='giftscrollView' scroll-y>
         <view class='list_item' wx:for="{{GiftData[myindex].presentList}}" catchtap='selectIndex' data-index="{{index}}">
@@ -595,16 +660,16 @@
         赠送
       </view>
     </view>
-       <view class='noGift' wx:if="{{GiftData.length==0}}">
-    <view class='notice_res'>
-      <text class='notice_res_title'>没有礼物</text>
-      <text class='notice_res_main'>您的背包里没有礼物，请前往礼物商城购买</text>
+    <view class='noGift' wx:if="{{GiftData.length==0}}">
+      <view class='notice_res'>
+        <text class='notice_res_title'>没有礼物</text>
+        <text class='notice_res_main'>您的背包里没有礼物，请前往礼物商城购买</text>
+      </view>
+      <view class='notice_Group'>
+        <view class='cendel'>取消</view>
+        <view class='goshop' catchtap='gift_shop'>前往礼物商城</view>
+      </view>
     </view>
-    <view class='notice_Group'>
-      <view class='cendel'>取消</view>
-      <view class='goshop' catchtap='gift_shop'>前往礼物商城</view>
-    </view>
-  </view>  
   </view>
 
 </template>
