--- a/pages/Release/push_experience/push_experience.wxml
+++ b/pages/Release/push_experience/push_experience.wxml
@@ -14,9 +14,10 @@
 <!--选择发布方式-->
 
 <template is="upimg" data="{{...myimg}}" wx:if="{{myimg.imgSrc!=null}}"></template>
-<!-- <template is="anthurPro" data='{{...description}}'></template> -->
+ <template is="anthurPro" wx:if="{{type=='兴趣'}}"  data='{{...description}}'></template> 
 <template is='allkind' wx:if="{{type=='兴趣'}}" data="{{...myallkind}}"></template>
-<view wx:if="{{type=='共享经验'}}">
+<!-- <view wx:if="{{type=='共享经验'}}"> -->
+<view>
   <template is="selet_group" data="{{...select}}"></template>
 </view>
 <!--所在位置  -->
