--- a/pages/Release/experience_res/experience_res.wxml
+++ b/pages/Release/experience_res/experience_res.wxml
@@ -25,9 +25,9 @@
     </view>
   </view>
   <view class='content'>
-    <image class='thumb' mode='widthFix' src='{{alldata.thumb}}'></image>
+    <!-- <image class='thumb' mode='widthFix' src='{{alldata.thumb}}'></image> -->
     <view class='textContent'>{{alldata.word}}</view>
-    <image class='thumb' mode='widthFix' src='{{alldata.image}}' wx:if="{{alldata.image!=''}}"></image>
+     <image class='thumb' mode='widthFix' src='{{alldata.image}}' wx:if="{{alldata.image!=''}}"></image> 
     <!--我添加的音频-->
     <template is="myaudio" data="{{...myaudio}}" wx:if="{{alldata.time!=0}}"></template>
     <!--我添加的视频-->
@@ -62,6 +62,7 @@
 <view wx:if="{{!getfous||!gift}}">
   <view class='foot'>
     <view class='foot_item' bindtap='zan'>
+      <image class=''></image>
       <view class="iconfont {{iszan?'icon-xihuan1':'icon-xin'}}"></view>
       <view class='foot_title'>点赞</view>
     </view>
