--- a/pages/Release/experience_res/experience_res.wxss
+++ b/pages/Release/experience_res/experience_res.wxss
@@ -427,7 +427,7 @@
   height: 100rpx;
   background-color: rgba(255, 255, 255, 1);
   position: fixed;
-  bottom: 0;
+  bottom:100rpx;
   display: flex;
   align-items: center;
   box-sizing: border-box;
@@ -466,4 +466,16 @@
   font-size: 30rpx;
   margin-right: 10rpx;
   color: rgba(51, 51, 51, 1);
+}
+
+.item_logo{
+  width: 40rpx;
+  height: 40rpx;
+}
+
+.nodata{
+  width: 100%;
+  line-height:200rpx;
+  font-size: 24rpx;
+  text-align: center;
 }
