--- a/pages/test/test.wxml
+++ b/pages/test/test.wxml
@@ -2,4 +2,5 @@
   <button bindtap='test'>测试</button>
   <input bindinput='ipt'></input>
   <button bindtap='send'>发送</button>
+  <view>11</view>
 </view>
