--- a/pages/chart/chart.wxml
+++ b/pages/chart/chart.wxml
@@ -5,7 +5,7 @@
 </view>
 <view wx:for="{{List}}">
   <view class='list_name'>{{item.name}}</view>
-  <view class='list_item' wx:for="{{item.list}}" wx:for-item="myitem">
+  <view class='list_item' wx:for="{{item.list}}" bindtap='toCharrooom' data-id='{{myitem.id}}'  wx:for-item="myitem">
     <image class='item_logo' src='{{myitem.avatar}}'></image>
     <view class='item_title'>{{myitem.user_nickname}}</view>
   </view>
